Atualização de curriculo

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -5,6 +5,7 @@ body {
   /*    assim todas as letras vão pra uma cor cinza escuro em vez do padrão preto*/
   line-height: 1.7;
   /*    espaçamento entre as linhas do texto*/
+  
 }
 a {
   transition: color 0.2s linear, border 0.2s linear;
@@ -18,11 +19,12 @@ a {
 }
 a:hover {
   border-bottom-color: transparent;
-  color: #bf8849;
+  color: #e9b57a;
 }
 p {
-  margin: 0 0 2vw;
+  padding-left: 0.5em;
 }
+
 img {
   max-width: 100%;
   /*    Isso serve para que as imagens não fiquem sobrepondo umas as outras, ATENÇÃO com imagens que você não quer mudar*/
@@ -87,8 +89,13 @@ li {
 .ul-icons {
   list-style-type: none;
   /*    tirei os bullets*/
-  padding-left: 0;
+  /* superior | direita | inferior | esquerda */
+  padding: 10px 0 10px 0;
   /*    coloquei eles mais pra trás*/
+  
+  display: flex;
+  justify-content: space-around;
+  
 }
 .ul-icons li {
   display: inline-block;
@@ -98,7 +105,6 @@ li {
   color: #49b1bf;
   
 }
-
 span {
   font-weight: bold;
 }
@@ -110,13 +116,12 @@ span {
 }
 .imagem-link img:hover{
   background:rgba(0, 0, 0, 0.1);
-
 }
 .recent-works-card img {
-  border-radius: 10px;
   overflow: hidden;
   /*    overflow: hidden; Para esconder o conteudo, as vezes tem que colocar*/
   height: 50px;
+
 }
 .recent-works-card-title {
   color: #666;
@@ -126,7 +131,7 @@ span {
 .recent-works-card-title:hover {
   text-decoration: underline;
   transition: .5s;
-  color: #bf8849;
+  color: #e9b57a;
 }
 
 /*TABELAS*/
@@ -140,27 +145,10 @@ span {
   padding: 0.75vw;
 }
 .table th {
-  background: #ccc;
+  background: rgb(175, 175, 175);
   padding: 0.75vw;
-  color: #bf8849;
+  color: #e9b57a;
 }
-.table-th:first-child {
-  border-top-left-radius: 10px;
-}
-.table-th:last-child {
-  border-top-right-radius: 10px;
-}
-.table-tbody tr td:first-child {
-  border-radius: 10px 0 0 100px;
-}
-.table-tbody tr td:last-child {
-  border-radius: 0 100px 10px 0;
-}
-/*
-.table tbody tr td{
-    border-bottom: 1px solid #ccc;
-}
-*/
 
 .table tbody tr:first-child td {
   border-top: 2px solid #666;
@@ -172,12 +160,7 @@ span {
 .table tbody tr:nth-child(even) td {
   /*odd para numeros impares*/
   /*even para numero pares*/
-  background: rgb(255, 255, 255);
-}
-.table-alternate tbody td,
-.table-alternate tbody tr:first-child td,
-.table-alternate tbody tr:last-child td {
-  border: 1px solid #ddd;
+  background: rgb(243, 243, 243);
 }
 
 .main-header {
@@ -188,11 +171,11 @@ span {
   height: 100%;
   width: 35%;
   /*    height: vai dar a altura de toda a pagina e uma width (largura) de tantos% da pagina*/
-  padding: 124px 54px 72px;
+  padding: 14px;
   /*    o padding: soma o tamanho do elemento, temos agora 100% de pagina mais os px adicionados. Para corrigir isso vamos adicionar o borderbox*/
   box-sizing: border-box;
   background-image: url(../images/overlay.png),
-    url(../images/fundo-azul-e-laranja.jpg);
+    url(../images/unnamed.jpg);
   /*    Vamos trabalhar com duas imagens, overlay essa é como uma capa cinza*/
   background-position: left top;
   /*    posicionando a imagem, preferi no left, na aula esta center*/
@@ -210,7 +193,7 @@ span {
   font-weight: normal;
   /*    vai tirar o negrito*/
   text-align: right;
-  color: rgba(255, 255, 255, 0.5);
+  color: #e9b57a;
 }
 .main-header-title strong {
   color: white;
@@ -226,22 +209,30 @@ span {
 .main-header-link img {
   border-radius: 50%;
   overflow: hidden;
-  width: clamp(20rem, 20vw, 30rem);
+  width: clamp(20vw, 22vw, 30rem);
+  margin-bottom: 20px;
 }
 .main-content {
   width: 65%;
   /*    pois no main-header estamos usando 35¨% da pagina*/
-  margin-left: 32%;
+  margin-left: 31.9%;
   /*    Dando um espaço igual ao main-header width, para que ocupemos 100% da pagina.*/
-  padding-left: 5.6vw;
-  /*    o padding: soma o tamanho do elemento, temos agora 100% de pagina mais os px adicionados. Para corrigir isso vamos adicionar o borderbox*/
-  box-sizing: border-box;
+  padding-left: 3vw;
 }
 .main-content-section{
   background:rgba(0, 0, 0, 0.1);
   width: 100%;
-  border-radius: 20px;
-  padding: 1vw;
+  padding-right: 1px;
+}
+.main-content-section-write{
+  padding: 1em;
+}
+.main-content-section-write h2{
+  padding: 0.40em;
+}
+.main-content-section h2{
+  /* superior | direita | inferior | esquerda */
+  padding: 10px 0 0 1em;
 }
 /*Grid*/
 .row {
@@ -260,7 +251,8 @@ span {
   width: 35%;
   /*    mesma largura do header*/
   left: 0;
-  padding: 0 54px 72px 0;
+  /* superior | direita | inferior | esquerda */
+  padding: 0 54px 12px 54px;
   text-align: right;
   box-sizing: border-box;
 }
@@ -281,7 +273,7 @@ span {
 .copyright li {
   display: inline-block;
   border-left: solid 1px rgba(255, 255, 255, 0.5);
-  padding: 0 0.75em;
+  padding: 0 0.75em 0 0;
   line-height: 1;
   font-size: 0.8em;
 }
@@ -291,36 +283,25 @@ span {
 .copyright li:last-child {
   padding-right: 0;
 }
-
 @media (max-width: 800px) {
- 
-.recent-works-card img {
-  height: 40px;
-  }
-}
-@media (max-width: 500px) {
   
   .main-header {
     position: relative;
-    top: 2vw;
-    left: 2vw;
-    right: 2vw;
-    width: 96%;
+    width: 100%;
     height: 30vw;
-    border-radius: 20px;
   }
   .main-header-link img {
     border-radius: 50%;
     overflow: hidden;
-    width: clamp(30vw, 40vw, 50vw);
+    width: clamp(20vw, 30vw, 35vw);
     position: absolute;
     left: 50%;
     top: 50%;
     margin-left: -45vw;
-    margin-top: -20vw;
+    margin-top: -15vw;
   }
   .main-header-title {
-    font-size: 1em;
+    font-size: 1.8em;
     line-height: 1.5;
     color: aliceblue;
     font-weight: normal;
@@ -329,9 +310,9 @@ span {
     position: absolute;
     left: 50%;
     top: 50%;
-    margin-left: -5vw;
-    margin-top: -15vw;
-    padding-right: 5vw;
+    margin-left: -10vw;
+    margin-top: -9vw;
+
   }
   .main-footer {
     display: none;
@@ -339,17 +320,24 @@ span {
   .main-content {
     width: 100%;
     /*    pois no main-header estamos usando 35¨% da pagina*/
-    margin: 0;
-    /* Dando um espaço igual ao main-header width, para que ocupemos 100% da pagina. */
-    padding: 3vw;
-    /*    o padding: soma o tamanho do elemento, temos agora 100% de pagina mais os px adicionados. Para corrigir isso vamos adicionar o borderbox*/
-    /* box-sizing: none; */
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
   }
-  .main-content-section{
-    padding: 0;
-
-  }
-  .recent-works-card img {
+}
+@media (max-width: 500px) {
+ 
+.recent-works-card img {
   height: 30px;
+  }
+  .main-header-link img {
+    width: 25vw;
+    top: 17.5vw;
+  }
+  .main-header-title {
+    font-size: .90em;
+  }
+  .ul-icons a {
+    font-size: 0.5em;
+    border-bottom: none;
   }
 }
