--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,7 @@ button p{
 .section{
     background-color: var(--background-secondary);
     padding: 5%;
-    margin: 3.65rem 0;
+    margin-top: 3.65rem;
 }
 .presentation{
     padding: 0 5%;
@@ -215,7 +215,8 @@ button p{
     justify-content: space-around;
 }
 .experience{
-    padding: 0 5%;
+    padding: 5%;
+    margin-top: 3.65rem;
 }
 .title-company{
     width: 50%;
@@ -242,6 +243,9 @@ button p{
 }
 .project{
     margin: 2.875rem 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 .projects-tec{
     color: var(--font-color-tertiary);
@@ -251,6 +255,7 @@ button p{
 }
 .projects-no-photo{
     width: 100%;
+    max-height: 2.5rem;
     padding: 1.875rem 0;
     color: var(--font-color-tertiary);
     border-left: var(--font-color-tertiary) 2px solid;
@@ -258,11 +263,16 @@ button p{
     align-items: center;
     justify-content: center;
 }
+.img-project{
+    max-width: 7rem;
+    max-height: 7rem;
+}
 .img-looper{
     display: none;
 }
 .img-about-me{
     display: none;
+    max-height: 100%;
 }
 footer{
 padding: 0 5%;
